完成导出功能

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@
 /src/DBExportWord/obj/Release/netcoreapp2.1/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 /src/DBExportWord/obj/Release/netcoreapp2.1/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 /src/DBExportWord/12345.doc
+/src/DBExportWord/bin/Debug/netcoreapp2.1
+/src/DBExportWord/obj/Debug/netcoreapp2.1
+/src/.vs/DBExportWord/DesignTimeBuild
+/src/.vs/DBExportWord/v15/Server/sqlite3
