--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@
 /src/DBExportWord/obj/Debug/netcoreapp2.1
 /src/.vs/DBExportWord/DesignTimeBuild
 /src/.vs/DBExportWord/v15/Server/sqlite3
+/src/DBExportWord/123.docx
