--- a/src/DBExportWord/DBExportWord.csproj
+++ b/src/DBExportWord/DBExportWord.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="12345.docx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="MySql.Data" Version="8.0.13" />
     <PackageReference Include="NPOI" Version="2.4.1" />
