修改表格显示格式

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@
 /src/.vs/DBExportWord/DesignTimeBuild
 /src/.vs/DBExportWord/v15/Server/sqlite3
 /src/DBExportWord/123.docx
+/src/DBExportWord/onecall1.docx
+/src/DBExportWord/onecall.docx
+/src/DBExportWord/modules_custom.docx
+/src/DBExportWord/mintcode_tuotuo.docx
